excel-com/tests/ui/consuming_close_invalidates_workbook.rs
use excel_com::{Workbook, WorkbookCloseOptions};

fn use_after_close(workbook: Workbook) {
    let _ = workbook.close(WorkbookCloseOptions::new());
    let _ = workbook.name();
}

fn main() {}
